Updated contributors shortcode. tweaked button css to fix an overflow issue.

--- a/themes/nav-community-v2/static/css/button.scss
+++ b/themes/nav-community-v2/static/css/button.scss
@@ -7,12 +7,12 @@
   padding: 12px 28px;
   border-radius: 37px;
   border: black 2px solid;
-  display: inline-block;
   min-width: 210px;
   text-align: center;  
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  white-space: nowrap;
   &.small {
     min-width: unset;
     padding: 10px 21px;
