--- a/themes/nav-community-v2/static/css/nav.scss
+++ b/themes/nav-community-v2/static/css/nav.scss
@@ -25,8 +25,7 @@ body {
 }
 
 
-.flex-center {
-  display: flex;
+.flex-center {  display: flex;
   align-items: center;
   justify-content: center;
 }
